2011-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Avoid assignments where the result overwrites operands in some unary operations.
	* src/z80/gen.c:
	  Avoid unnecessary saving of iy in builtin memcpy().

2011-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Avoid assignments where the result overwrites operands in subtraction, addition, bitwise and, xor;
	  get correct cost for bitwise or.
	* src/z80/gen.c:
	  Remove workaround for result overwritings operands in addition; fixed commitPair() for swapped bytes in target.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed broken or when result is sfr.
	* src/z80/peeph-z80.def:
	  Fixed broken peephole for combining additions next to pushes.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Allow iy as operand to left shift and decrement.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fixed broken caching of values in hl during pointer assignment.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Do not allocate operands to hl when the code generator will use (hl) for the result in addition.

2011-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for restoring of register iy when other register pairs are restored as well.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix peephole 76' so it doesn't overwrite accumulator during multibyte addition.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for genPointerGet when result is lh.

2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for addition with literal when right operand is partially in hl.

2011-03-29 Borut Razem <borut.razem AT gmail.com>

	* Partially merge from trunk

2011-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/gen.c,
          src/z80/ralloc2.cc,