@@ -627,10 +627,10 @@ getPairId (const asmop * aop)
 static void
 emit2 (const char *szFormat, ...)
 {
+  va_list ap;
+
   if (regalloc_dry_run)
     return;
-
-  va_list ap;
 
   va_start (ap, szFormat);
 
@@ -898,11 +898,13 @@ emit3Cost (enum asminst inst, asmop * op1, int offset1, asmop * op2, int offset2
 static void
 emit3_o (enum asminst inst, asmop * op1, int offset1, asmop * op2, int offset2)
 {
+  unsigned char cost;
+
   regalloc_dry_run_cost += emit3Cost (inst, op1, offset1, op2, offset2);
   if (regalloc_dry_run)
     return;
 
-  unsigned char cost = regalloc_dry_run_cost;
+  cost = regalloc_dry_run_cost;
   if (!op1)
     emit2 ("%s", asminstnames[inst]);
   else if (!op2)
@@ -2426,10 +2428,10 @@ static bool
 canAssignToPtr3 (const asmop * aop)
 {
   if (aop->type == AOP_ACC || aop->type == AOP_REG || aop->type == AOP_HLREG)
-    return (true);
+    return (TRUE);
   if (aop->type == AOP_IMMD || aop->type == AOP_LIT || aop->type == AOP_SIMPLELIT)
-    return (true);
-  return (false);
+    return (TRUE);
+  return (FALSE);
 }
 
 /*-----------------------------------------------------------------*/
@@ -2671,7 +2673,7 @@ aopPut3 (asmop * op1, int offset1, asmop * op2, int offset2)
   unsigned char cost = regalloc_dry_run_cost;
 
   if (!regalloc_dry_run)
-    aopPut (op1, aopGet (op2, offset2, false), offset1);
+    aopPut (op1, aopGet (op2, offset2, FALSE), offset1);
 
   regalloc_dry_run_cost = cost + ld_cost (op1, op2);
 }
@@ -2973,6 +2975,9 @@ genCpl (const iCode * ic)
 static void
 _gbz80_emitAddSubLongLong (const iCode * ic, asmop * left, asmop * right, bool isAdd)
 {
+  const char *first = isAdd ? "add" : "sub";
+  const char *later = isAdd ? "adc" : "sbc";
+
   wassert (!regalloc_dry_run);
 
   /* Logic:
@@ -2987,8 +2992,6 @@ _gbz80_emitAddSubLongLong (const iCode * ic, asmop * left, asmop * right, bool i
      de = hl -de
      store de into result
    */
-  const char *first = isAdd ? "add" : "sub";
-  const char *later = isAdd ? "adc" : "sbc";
 
   wassertl (IS_GB, "Code is only relevant to the gbz80");
   wassertl (AOP (IC_RESULT (ic))->size == 4, "Only works for four bytes");
@@ -3215,8 +3218,8 @@ _saveRegsForCall (const iCode * ic, int sendSetSize, bool dontsaveIY)
 
   if (_G.saves.saved == FALSE)
     {
-      bool deInUse, bcInUse;
-      bool deSending;
+      //bool deInUse, bcInUse;
+      //bool deSending;
       bool bcInRet = FALSE, deInRet = FALSE;
       bool push_bc, push_de, push_iy;
       /*bitVect *rInUse;
@@ -4631,7 +4634,9 @@ genPlus (iCode * ic)
 
   if (getPairId (AOP (IC_RESULT (ic))) == PAIR_IY)
     {
-      bool save_pair = false;
+      bool save_pair = FALSE;
+      PAIR_ID pair;
+
       if (getPairId (AOP (IC_RIGHT (ic))) == PAIR_IY || getPairId (AOP (IC_LEFT (ic))) == PAIR_BC
           || getPairId (AOP (IC_LEFT (ic))) == PAIR_DE)
         {
@@ -4639,12 +4644,12 @@ genPlus (iCode * ic)
           IC_RIGHT (ic) = IC_LEFT (ic);
           IC_LEFT (ic) = t;
         }
-      PAIR_ID pair = getPairId (AOP (IC_RIGHT (ic)));
+      pair = getPairId (AOP (IC_RIGHT (ic)));
       if (pair != PAIR_BC && pair != PAIR_DE)
         {
           pair = isPairDead (PAIR_DE, ic) ? PAIR_DE : PAIR_BC;
           if (!isPairDead (pair, ic))
-            save_pair = true;
+            save_pair = TRUE;
         }
       fetchPair (PAIR_IY, AOP (IC_LEFT (ic)));
       if (save_pair)
@@ -5814,10 +5819,12 @@ static void
 gencjne (operand * left, operand * right, symbol * lbl)
 {
   symbol *tlbl;
+  PAIR_ID pop;
+
   if (!regalloc_dry_run)
     tlbl = newiTempLabel (NULL);
 
-  PAIR_ID pop = gencjneshort (left, right, lbl);
+  pop = gencjneshort (left, right, lbl);
 
   /* PENDING: ?? */
   if (!regalloc_dry_run)
@@ -6173,9 +6180,11 @@ genAnd (const iCode * ic, iCode * ifx)
   if ((AOP_TYPE (right) == AOP_LIT) && (AOP_TYPE (result) == AOP_CRY) && (AOP_TYPE (left) != AOP_CRY))
     {
       symbol *tlbl;
+      int sizel;
+
       if (!regalloc_dry_run)
         tlbl = newiTempLabel (NULL);
-      int sizel = AOP_SIZE (left);
+      sizel = AOP_SIZE (left);
       if (size)
         {
           /* PENDING: Test case for this. */
@@ -6373,9 +6382,11 @@ genOr (const iCode * ic, iCode * ifx)
   if ((AOP_TYPE (right) == AOP_LIT) && (AOP_TYPE (result) == AOP_CRY) && (AOP_TYPE (left) != AOP_CRY))
     {
       symbol *tlbl;
+      int sizel;
+
       if (!regalloc_dry_run)
         tlbl = newiTempLabel (NULL);
-      int sizel = AOP_SIZE (left);
+      sizel = AOP_SIZE (left);
 
       if (size)
         {
@@ -6546,9 +6557,11 @@ genXor (const iCode * ic, iCode * ifx)
   if ((AOP_TYPE (right) == AOP_LIT) && (AOP_TYPE (result) == AOP_CRY) && (AOP_TYPE (left) != AOP_CRY))
     {
       symbol *tlbl;
+      int sizel;
+
       if (!regalloc_dry_run)
         tlbl = newiTempLabel (NULL);
-      int sizel = AOP_SIZE (left);
+      sizel = AOP_SIZE (left);
 
       if (size)
         {
@@ -9465,7 +9478,7 @@ genZ80iCode (iCode * ic)
 unsigned char
 dryZ80iCode (iCode * ic)
 {
-  regalloc_dry_run = true;
+  regalloc_dry_run = TRUE;
   regalloc_dry_run_cost = 0;
 
   /* Hack */
@@ -9512,7 +9525,7 @@ genZ80Code (iCode * lic)
 
   iCode *ic;
   int cln = 0;
-  regalloc_dry_run = false;
+  regalloc_dry_run = FALSE;
 
   /* Hack */
   if (IS_GB)
@@ -9535,7 +9548,7 @@ genZ80Code (iCode * lic)
     }
 
   for (ic = lic; ic; ic = ic->next)
-    ic->generated = false;
+    ic->generated = FALSE;
 
   /* Generate Code for all instructions */
   for (ic = lic; ic; ic = ic->next)
